--- a/summarium/src/App.css
+++ b/summarium/src/App.css
@@ -24,7 +24,9 @@
 .Statuses{
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-column: 2/5;
+  grid-column: 1/6;
+  width: 90%;
+  margin-left: 5%;
 }
 
 .Status {
@@ -33,4 +35,8 @@
   padding-top: 1vw;
   padding-bottom: 1vw;
 
+}
+
+.Status h1 {
+  font-size: 3vw;
 }
